
# This is a CMake example for Python

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

# INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(shogun.i PROPERTIES CPLUSPLUS ON)
# SET_SOURCE_FILES_PROPERTIES(shogun.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(shogun python shogun.i)
SWIG_LINK_LIBRARIES(shogun ${PYTHON_LIBRARIES})
